continuation of my project

--- a/shofco.html
+++ b/shofco.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Shofco-School</title>
     <link rel="stylesheet" href="school.css">
 </head>
 <body>
@@ -31,20 +31,34 @@
         <section id="activities">
             <h2>Clubs & Activities</h2>
             <section id="Music">
+                <div>
+                    <img src="https://cdn.pixabay.com/photo/2021/06/22/18/28/children-6356977_640.jpg" alt="music">
+                </div>
+                <div>
                 <h3>Music</h3>
                 <p>
                     besides learning students also participate in music for those intrested and learning <br>
                     and are given achance to participate in national music festival competition
                 </p>
+                </div>
+                
 
             </section>
             <section id="Writing">
+                <div>
+                    <img src="https://cdn.pixabay.com/photo/2015/09/09/20/50/writing-933262_640.jpg" alt="Writing">
+                </div>
+                <div>
                 <h3>Writing</h3>
                 <p>Students also participate in writing competition both physically and using machines <br> hence increasing their proficiency in their writing skills
                 </p>
+                </div>
 
             </section>
             <section id="Dance">
+                <div>
+                    <img src="https://media.istockphoto.com/id/1495038175/photo/strike-a-pose.jpg?s=612x612&w=0&k=20&c=IuL2coKo-NhdHvTkROCWpDXrkehj67oIeiALhetbB7o=" alt="Dance">
+                </div>
                 <h3>Dance</h3>
                 <p>ooh dancing this is the most active part with a lot of students participating in it with this <br>
                 students feels relaxed and also showcase  their dancing movements </p>
